# cupcake.cmake

./: CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py
cmake/: cupcake.cmake  cupcake_add_executable.cmake  cupcake_add_executables.cmake  cupcake_add_libraries.cmake  cupcake_add_library.cmake  cupcake_add_subproject.cmake  cupcake_add_test.cmake  cupcake_add_test_executable.cmake  cupcake_add_tests.cmake  cupcake_assert.cmake  cupcake_assert_special.cmake  cupcake_create_symbolic_link.cmake  cupcake_enable_testing.cmake  cupcake_find_package.cmake  cupcake_find_packages.cmake  cupcake_find_sources.cmake  cupcake_generate_version_header.cmake  cupcake_install_cpp_info.cmake  cupcake_install_project.cmake  cupcake_isolate_headers.cmake  cupcake_json.cmake  cupcake_link_libraries.cmake  cupcake_project.cmake
cmake/data/: call.cmake  debug.cmake  gdbinit  install_cpp_info.cmake  package-config.cmake.in
cmake/data/project_cpp_info/: CMakeLists.txt
